# marketfantasy-league

./: .eslintrc.json  .gitignore  AI_SETUP.md  Anchor.toml  CLAUDE.md  CORREÇÕES-URGENTES.md  DEMO-GUIDE.md  DEPLOY_MIGRATION.md  README.md  SECURITY.md  VERCEL_SETUP.md  build-script.js  check-leagues.js  clear-cache.mjs  i18n.ts  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  preview.html  prompt-4-decoded.txt  prompt-4.txt  setup-anchor-tests.sh  tokens.json  tokens_debug.json  tsconfig.json  vercel-guide-decoded.txt  vercel-optimization-guide.txt  vercel.json
.claude/: settings.local.json
docs/: BUGFIXES-2025-10-18.md  METAMASK-FIX.md  PRD.md  TOKEN_STORAGE_FORMAT.md  TOKEN_VALIDATION.md  WALLET_MISMATCH_SECURITY.md  cache-strategy.md  helius-free-tier-optimization.md  helius-integration-summary.md  token-storage-flow.md
messages/: en.json  pt.json
prisma/: dev.db  schema.prisma
programs/cryptofantasy/: Cargo.toml  README.md
programs/cryptofantasy/src/: lib.rs
public/: bull-bear-bg.html  suppress-metamask.js
scripts/: README.md  add-email-verification.js  add-email-wallet-fields-v2.js  add-email-wallet-fields.js  add-main-league-entry.ts  add-missing-fields-mock.js  add-onboarding-redirect.js  add-post-login-redirect.js  add-test-entry.ts  add-wallet-link-function.js  check-db-corruption.js  check-deprecated-tokens.ts  check-env.ts  check-imports.js  check-league-fee.js  check-main-league-entry.ts  check-team-data.ts  check-tokens-table.ts  check-users.js  clear-teams.ts  create-community-league.ts  delete-meu-time.ts  (+53 more)
(+206 files in other folders)
