[package]
name = "cryptofantasy"
version = "0.1.0"
description = "CryptoFantasy League - Solana Fantasy Game Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptofantasy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
tokio = "1.0"
